--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="box.js"></script>
     <script src="ground.js"></script>
     <script src="slingshot.js"></script>
- 
+    <script src="polygon.js"></script>
 
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
